testing/framework/resources/Advanced/Failing/mondrian/query5871.e
1997	1234	195448.0000
1997	1234567890123	739.0000
